--- a/Lagg.Logging.csproj
+++ b/Lagg.Logging.csproj
@@ -4,6 +4,12 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Title>Lagg.Logging</Title>
+    <Authors>https://github.com/ProfessorLagg</Authors>
+    <Description>Simple static logger</Description>
+    <PackageProjectUrl>https://github.com/ProfessorLagg/Lagg.Logging</PackageProjectUrl>
+    <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
   </PropertyGroup>
 
 </Project>
